# spadebox

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deno.json  justfile  notes.md  pyproject.toml  todo.md
.claude/skills/maintain-docs/: SKILL.md
.claude/skills/prepublish/: SKILL.md
.github/: renovate.json
.github/workflows/: CI.yml
crates/spadebox-cli/: Cargo.toml
crates/spadebox-cli/src/: main.rs
crates/spadebox-core/: Cargo.toml
crates/spadebox-core/src/: error.rs  fs_utils.rs  grep.rs  lib.rs  runtime.rs  sandbox.rs  tool_utils.rs  tools.rs
crates/spadebox-core/src/js_runtime/: console.rs  executor.rs  fetch.rs  files.rs  loader.rs  mod.rs
crates/spadebox-core/src/tools/: edit.rs  fetch.rs  glob.rs  grep.rs  js_exec.rs  js_repl.rs  mod.rs  move.rs  read.rs  write.rs
crates/spadebox-mcp/: Cargo.toml
crates/spadebox-mcp/src/: main.rs
dart/: .gitignore  Cargo.toml  pubspec.yaml
dart/lib/: spadebox.dart
dart/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
dart/linux/: CMakeLists.txt
dart/src/: frb_generated.rs  lib.rs
examples/: .env.example
examples/dart/: agent.dart  pubspec.yaml
examples/flutter/: .gitignore  README.md  pubspec.yaml
examples/flutter/android/app/: build.gradle
examples/flutter/android/app/src/main/: AndroidManifest.xml
examples/flutter/android/app/src/main/kotlin/dev/spadebox/agent_example/: MainActivity.kt
examples/flutter/lib/: agent.dart  main.dart
examples/flutter/linux/: CMakeLists.txt
examples/flutter/linux/flutter/: generated_plugins.cmake
examples/flutter/linux/runner/: my_application.cc
examples/flutter/test/: widget_test.dart
examples/js/: agent.ts  deno.json  subagent.ts
examples/mock_llm_server/: deno.json  mod.ts  types.ts
examples/mock_llm_server/scenarios/: mod.ts  read_file.ts
examples/python/: agent.py  pyproject.toml
examples/rust/: Cargo.toml  README.md  agent.rs
flutter/: Cargo.toml  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/: build.gradle
flutter/lib/: spadebox.dart
flutter/lib/src/rust/: frb_generated.dart  frb_generated.io.dart
flutter/linux/: CMakeLists.txt
flutter/src/: api.rs  frb_generated.rs
js/: .gitignore  .yarnrc.yml  Cargo.toml  deno.json  index.d.ts  index.js  index.ts  package.json
js/__test__/: index.spec.ts
js/example/: mistral.ts
js/src/: lib.rs
js/test/: index.test.ts
mcp/: Cargo.toml
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/test/: test_index.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/tests/: integration_test.rs
skill/: maintain-docs.md  prepublish.md
src/: lib.rs  sandbox.rs
tests/js_exec/: async.js  basic.js  fs_import.js  fs_import_default.js  fs_ops.js  multiline.js
tests/mock_openai_api/: main.ts  mod.ts
tests/mock_openai_api/scenarios/: fetch.ts  mod.ts  subagent.ts
tests/runner/: deno.json  examples.ts  js_runtime.ts  main.ts
website/: docusaurus.config.ts  sidebars.ts
website/blog/: 2026-05-06-hello-world.md  authors.yml  tags.yml
website/docs/: about.mdx  http.mdx  js_runtime.mdx  quick-start.mdx
website/docs/tools/: _category_.json  edit_file.md  fetch.md  glob.md  grep.md  js_exec.md  js_repl.md  move.md  read_file.md  write_file.md
website/scripts/: generate-tools.ts  inject-snippets.ts
website/src/css/: custom.css
website/src/pages/: index.mdx
