[workspace]
members = [
    "crates/spadebox-core",
    "crates/spadebox-mcp",
    "js",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[profile.release]
lto = true
strip = "symbols"
