[workspace]
members = [
    "crates/spadebox-core",
    "crates/spadebox-mcp",
    "crates/spadebox-cli",
    "js",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros", "sync"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = "symbols"

[workspace.lints.clippy]
get_first = "allow"
