[workspace]
members = [
    # Public interfaces
    "js",
    "python",
    "rust",
    "mcp",
    "flutter",
    "dart",

    # Internal crates
    "crates/spadebox-core",
    "crates/spadebox-cli",

    # Tests and examples
    "examples/rust",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros", "sync"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["preserve_order"] }
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = "symbols"

[workspace.lints.clippy]
get_first = "allow"
