[package]
name = "spadebox-mcp"
version = "0.5.0"
edition = "2024"
description = "Spadebox tools exposed through MCP"
license = "MIT"
repository = "https://github.com/CharlyCst/spadebox"
readme = "README.md"

[[bin]]
name = "spadebox-mcp"
path = "src/main.rs"

[dependencies]
spadebox-core = { path = "../crates/spadebox-core", version = "0.5.0" }
tokio = { workspace = true }
serde_json = { workspace = true }
rmcp = { version = "1.3.0", features = ["server", "transport-io", "schemars"] }
anyhow = { workspace = true }
clap = { workspace = true }
