[package]
authors = ["Charly Castes <charly.castes@epfl.ch>"]
edition = "2024"
name = "spadebox-python"
version = "0.5.1"
publish = false

[lib]
name = "spadebox"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
serde_json = { workspace = true }
spadebox-core = { path = "../crates/spadebox-core" }
tokio = { workspace = true }
