[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "spadebox"
version = "0.5.1"
readme = "README.md"
description = "Tools for your AI agents"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.maturin]
module-name = "spadebox"
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
    "maturin>=1.13.1",
    "pytest",
]
