[package]
name = "spadebox"
version = "0.4.0"
edition = "2024"
description = "Shovels for your AI agents"
license = "MIT"
repository = "https://github.com/CharlyCst/spadebox"
readme = "README.md"

[dependencies]
spadebox-core = { path = "../crates/spadebox-core" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
