[package]
name = "spadebox-cli"
version = "0.3.0"
edition = "2024"
description = "Spadebox tools exposed through a human-friendly CLI"
license = "MIT"
repository = "https://github.com/CharlyCst/spadebox"

[[bin]]
name = "spadebox-cli"
path = "src/main.rs"

[dependencies]
spadebox-core = { path = "../spadebox-core", version = "0.3.0" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
