[package]
name = "spadebox-core"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-std = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
grep-regex = "0.1"
grep-searcher = "0.1"
globset = "0.4"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
