[package]
name = "spadebox-core"
version = "0.1.0"
edition = "2024"
description = "Common tools for AI agents"
license = "MIT"
repository = "https://github.com/CharlyCst/spadebox"
readme = "../../README.md"

[dependencies]
cap-std = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
grep-regex = "0.1"
grep-searcher = "0.1"
globset = "0.4"
reqwest = "0.13"

[dev-dependencies]
tempfile = "3"
