[package]
name = "spadebox-core"
version = "0.2.0"
edition = "2024"
description = "Common tools for AI agents"
license = "MIT"
repository = "https://github.com/CharlyCst/spadebox"
readme = "README.md"

[dependencies]
cap-std = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
grep-regex = "0.1"
grep-searcher = "0.1"
globset = "0.4"
htmd = "0.5"
# rustls-no-provider + ring: avoids aws-lc-sys (C build) for cross-compilation compatibility
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

[dev-dependencies]
tempfile = "3"
