[package]
name = "spadebox-mcp"
version = "0.1.0"
edition = "2024"
description = "Spadebox tools exposed through MCP"
license = "MIT"
repository = "https://github.com/CharlyCst/spadebox"
readme = "../../README.md"

[[bin]]
name = "spadebox-mcp"
path = "src/main.rs"

[dependencies]
spadebox-core = { path = "../spadebox-core", version = "0.1.0" }
tokio = { workspace = true }
serde_json = { workspace = true }
rmcp = { version = "1.3.0", features = ["server", "transport-io", "schemars"] }
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
