[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[[example]]
name = "agent"
path = "agent.rs"

[dependencies]
spadebox = { path = "../../rust" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
